# ai-compute-platform

./: .env.example  .gitignore  EXAMPLES.md  JEDNODUCHY_NAVOD.md  NAVOD_PRO_DETI.md  README.md  README_DETI.md  RYCHLY_START.md  SETUP.md  docker-compose.yml  pyproject.toml  start_all.ps1  start_all.sh  start_compute.ps1  start_gateway.ps1  stop_all.ps1  stop_all.sh  test_grpc_direct.py
.github/workflows/: ci.yml
ml_models/: INSTALL_ONNX.md  README.md  export_only.py  mnist_model.onnx  requirements.txt  test_classifier.py  test_simple.py  train_mnist.py
monitoring/: prometheus.yml
monitoring/grafana-dashboards/: dashboard.yml
proto/: compute.proto
services/compute/: .env.example  CMakeLists.txt  Dockerfile  test_ml.cpp
services/compute/include/: compute_engine.hpp  matrix_ops.hpp  monte_carlo.hpp  neural_network.hpp  server.hpp  stats_ops.hpp
services/compute/include/utils/: logger.hpp  thread_pool.hpp
services/compute/models/: mnist_model.onnx.data
services/compute/src/: compute_engine.cpp  main.cpp  matrix_ops.cpp  monte_carlo.cpp  neural_network.cpp  server.cpp  stats_ops.cpp
services/compute/src/utils/: logger.cpp  thread_pool.cpp
services/compute/tests/: CMakeLists.txt  test_matrix_ops.cpp  test_monte_carlo.cpp  test_stats_ops.cpp
services/gateway/: .env.example  Dockerfile  requirements.txt
services/gateway/app/: config.py  main.py
services/gateway/app/models/: ml_schemas.py  schemas.py
services/gateway/app/routers/: ai.py  compute.py  health.py  ml.py
services/gateway/app/services/: ai_assistant.py  compute_client.py
services/gateway/tests/: conftest.py  test_api.py
